fixed testimonial title alignment

--- a/style.css
+++ b/style.css
@@ -185,7 +185,6 @@ a:hover {
     display: flex;
     width: 100%;
     height: 564px;
-    align-items: center;
 }
 
 #testimonial-title {
@@ -195,6 +194,9 @@ a:hover {
     font-family: 'Averia Serif Libre';
     font-weight: bold;
     color: white;
+    position: relative;
+    right: 100px;
+    top: 100px;
 }
 
 #testimonial-text-1 {
@@ -204,7 +206,7 @@ a:hover {
     text-align: center;
     padding-top: 75px;
     padding-left: 300px;
-    margin: auto;
+    margin-top: 100px;
     width: 350px;
 }
 
@@ -215,6 +217,7 @@ a:hover {
     text-align: center;
     padding-top: 75px;
     margin-right: 300px;
+    margin-top: 100px;
     width: 350px;
 }
 
